      as separator
    * add epylint.bat script to fix Windows installation
    * setuptools/easy_install support
    * include a modified version of Maarten ter Huurne patch to avoid W0613
      warning on arguments from overridden method
    * implement #5575  drop dumb W0704 message) by adding W0704 to ignored
      messages by default
    * fix W0631, false positive reported by Paul Hachmann
    * fix #6951: false positive with W0104
    * fix #6949
    * patches by Mads Kiilerich:
	* implement #4691, with a new zero-status-cat option to control which
	  categories of message won't make pylint exits with a non zero return
	  status if any
	* fix #3711, #5626 (name resolution bug w/ decorator and class members)
	* fix #6954
	
2008-10-13  --  0.15.2
    * fix #5672: W0706 weirdness ( W0706 removed )
    * fix #5998: documentation points to wrong url for mailing list
    * fix #6022: no error message on wrong module names
    * fix #6040: pytest doesn't run test/func_test.py

2008-09-15  --  0.15.1
    * fix #4910: default values are missing in manpage
    * fix #5991: missing files in 0.15.0 tarball
    * fix #5993: epylint should work with python 2.3

2008-09-10  --  0.15.0
    * include pyreverse package and class diagram generation
    * included Stefan Rank's patch to deal with 2.4 relative import
    * included Robert Kirkpatrick's tutorial and typos fixes
    * fix bug in reenabling message
    * fix #2473: invoking pylint on __init__.py (hopefuly)
    * typecheck: acquired-members option has been dropped in favor of the more
      generic generated-members option. If the zope option is set, the behaviour
      is now to add some default values to generated-members.
    * flymake integration: added bin/epylint and elisp/pylint-flymake.el
	
2008-01-14  --  0.14.0
    * fix #3733: Messages (dis)appear depending on order of file names
    * fix #4026: pylint.el should require compile
    * fix a bug in colorized reporter, spotted by Dave Borowitz